maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:39: error: value unary_! is not a member of Unit
          if (!aMurSud(x, y))
              ^ShortestPathMaze:42: error: value unary_! is not a member of Unit
          if (!aMurEst(x, y))
              ^ShortestPathMaze:57: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^ShortestPathMaze:57: warning: enclosing method aMurEst has result type Unit: return value discarded
      return true
      ^ShortestPathMaze:59: warning: enclosing method aMurEst has result type Unit: return value discarded
      return aMurOuest(x+1, y) == true
      ^ShortestPathMaze:65: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^ShortestPathMaze:65: warning: enclosing method aMurSud has result type Unit: return value discarded
      return true
      ^ShortestPathMaze:67: warning: enclosing method aMurSud has result type Unit: return value discarded
      return aMurNord(x, y-1) == true
      ^